--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <header>
         <h1>Richard Weißmann</h1>
-        <p>Bestselling Author of Contemporary Fiction</p>
+        <p>Bestselling Author of Technology Startup</p>
     </header>
 
     <div class="container">
