--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h2>Global Tech Journey</h2>
             <div class="experience-grid">
                 <div class="experience-card">
-                    <h3>Silicon Valley</h3>
+                    <h3>Switzerland</h3>
                     <p>Led development teams at prominent tech startups, focusing on scalable cloud solutions and AI integration.</p>
                     <div class="tech-stack">
                         <span class="tech-badge">Cloud Architecture</span>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="experience-card">
-                    <h3>European FinTech</h3>
+                    <h3>Germany Automotive</h3>
                     <p>Developed cutting-edge financial systems for major European banks and trading platforms.</p>
                     <div class="tech-stack">
                         <span class="tech-badge">Financial Systems</span>
